[tool.poetry]
name = "passando-recibo"
version = "0.1.0"
description = ""
authors = ["Ana Paula Gomes <apgomes88@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
google-generativeai = "^0.5.2"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
ipywidgets = "^8.1.2"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
